--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+
+.NavBar-logo {
+  width: 50px;
+  height: auto;
+  border-radius: 100%;
+  margin-right: 20px;
+  margin-left: 20px;
+}
