--- a/src/App.css
+++ b/src/App.css
@@ -78,3 +78,14 @@
   border-radius: 50px;
   padding: 10px;
 }
+
+@media screen and (min-width: 100px) {
+  .card {
+    background-color: #f0f0f0;
+    margin-top: 30px;
+    margin-left: 60px;
+    margin-right: 60px;
+    padding: 10px;
+    border-radius: 5px;
+  }
+}
