--- a/src/App.css
+++ b/src/App.css
@@ -61,7 +61,7 @@
 }
 
 .Inserimento {
-  padding-top: 120px;
+  padding-top: 30px;
   font-weight: 300;
   font-size: 50px;
   font-family: Georgia, "Times New Roman", Times, serif;
@@ -85,7 +85,8 @@
     margin-top: 30px;
     margin-left: 60px;
     margin-right: 60px;
-    padding: 10px;
+    margin-bottom: 20px;
+    padding: 150px;
     border-radius: 5px;
   }
 }
